Created idea-plugin module.